	- Now use JPEG compression when the number of colors
	  would be > 32 colors or 16 gray shades.
	- True transparency support for GIF files and PDF 1.3 and
	  PostScript Level 2 or 3 output!
	- The GUI now automatically changes the extension of the
	  output filename as needed.
	- The GUI now collects all error messages and shows them
	  once after the document is generated.
	- Added support for HSPACE attribute for images with
	  ALIGN="LEFT" or ALIGN="RIGHT".
	- Added new Java interface to HTMLDOC.

    CHANGES

	- Consolidated temporary file management into new
	  file_temp() function.  The new function also makes use
	  of the Windows "short lived" open option which may
	  improve performance with small temporary files.
	- Updated book file format and added an appendix
	  describing the format.
	- Now default to PDF 1.3 (Acrobat 4.0) output format.
	- Now output length of PDF streams with the stream
	  object; this offers a modest reduction in file size.
	- The HTTP file cache now keeps track of previous URLs
	  that were downloaded.
	- The HTTP code now supports redirections (status codes
	  301 to 303) to alternate URLs.
	- Limit the height check for table rows to 1/8th of the
	  page length; this seems to provide fairly consistent
	  wrapping of tables without leaving huge expanses of
	  blank space at the bottom of pages.
	- The HTML output now also includes a font-family style
	  for PRE text; otherwise the body font would override
	  the PRE font with some browsers.
	- The snprintf/vsnprintf emulation functions were not
	  included in the HTMLDOC makefile.
	- RGB hex colors are now recognized with or without the
	  leading #.  This breaks HTML standards compliance but
	  should reduce the number of problem reports from buggy
	  HTML.
	- The stylesheet generated with the HTML output no longer
	  contains absolute font sizes, just the typefaces and
	  a relative size for SUB/SUP.
	- The title image is no longer scaled to 100% in the
	  HTML output.
